--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,17 @@
 Source: python-pyhsm
-Maintainer: Fredrik Thulin <fredrik@yubico.com>
+Maintainer: Yubico Developers <yubico-devel@googlegroups.com>
+Uploaders: Fredrik Thulin <fredrik@yubico.com>, Simon Josefsson <simon@josefsson.org>
 Section: python
 Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3),
 	       debhelper (>= 7),
 	       python,
 	       python-support (>= 0.8.4)
-Standards-Version: 3.9.1
+Vcs-Git: git://github.com/Yubico/python-pyhsm-dpkg.git
+Vcs-Browser: https://github.com/Yubico/python-pyhsm-dpkg
+Homepage: https://github.com/Yubico/python-pyhsm
+Standards-Version: 3.9.2
+DM-Upload-Allowed: yes
 
 Package: python-pyhsm
 Architecture: all
@@ -14,31 +19,41 @@ Depends: ${python:Depends},
 	 ${misc:Depends},
 	 python-crypto,
 	 python-serial
-Recommends: yhsm-common
+Recommends: yhsm-tools
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
-Description: Python code for talking to a YubiHSM
+Description: Python code for talking to a Yubico YubiHSM hardware
  YubiHSM is an easy to use and affordable crypto appliance
  that you connect to the USB port of a server. You can then
- store AES crypto keys on the YubiHSM and use them from the
+ store cryptographic keys on the YubiHSM and use them from the
  server without any possibility for an attacker to extract
  the crypto keys from the YubiHSM.
  .
- Supported operations :
+ Supported operations include YubiKey OTP validation, AES ECB
+ encrypt/decrypt/decrypt-compare, HMAC-SHA1 hashing (enabling OATH code
+ validation), and Random number entropy generation.
  .
-   * YubiKey OTP validation
-   * AES ECB encrypt/decrypt/decrypt-compare
-   * HMAC-SHA1 hashing (enabling OATH code validation)
-   * Random number entropy generation
+ This package contains the core Python code for interacting with the
+ YubiHSM.
 
-Package: yhsm-common
+Package: yhsm-tools
 Architecture: all
 Depends: ${python:Depends},
 	 ${misc:Depends},
 	 python-pyhsm (= ${binary:Version})
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
-Description: Common files for YubiHSM applications.
+Description: Common files for YubiHSM applications
+ YubiHSM is an easy to use and affordable crypto appliance
+ that you connect to the USB port of a server. You can then
+ store cryptographic keys on the YubiHSM and use them from the
+ server without any possibility for an attacker to extract
+ the crypto keys from the YubiHSM.
+ .
+ Supported operations include YubiKey OTP validation, AES ECB
+ encrypt/decrypt/decrypt-compare, HMAC-SHA1 hashing (enabling OATH code
+ validation), and Random number entropy generation.
+ .
  This package includes the following utilities :
  .
    * yhsm-keystore-unlock - Keystore unlock
@@ -50,12 +65,16 @@ Depends: ${python:Depends},
 	 ${misc:Depends},
 	 adduser,
 	 python-pyhsm (= ${binary:Version}),
-	 yhsm-common
+	 yhsm-tools
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
-Description: Validation server using YubiHSM.
+Description: Validation server using YubiHSM
  Validate YubiKey OTP's, OATH codes or password hashes using
  YubiHSM. Interface is a REST API with a simple web server
+ listening on localhost only (per default).
+ .
+ This package validate YubiKey OTP's, OATH codes or password hashes
+ using YubiHSM. Interface is a REST API with a simple web server
  listening on localhost only (per default).
 
 Package: yhsm-yubikey-ksm
@@ -64,9 +83,13 @@ Depends: ${python:Depends},
 	 ${misc:Depends},
 	 adduser,
 	 python-pyhsm (= ${binary:Version}),
-	 yhsm-common
+	 yhsm-tools
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
-Description: Yubikey Key Storage Module using YubiHSM.
+Description: Yubikey Key Storage Module using YubiHSM
  Decryption backend for a Yubico validation service. Uses the
  YubiHSM to decrypt YubiKey OTPs and answer 'OK' or 'ERR'.
+ .
+ This package provides the decryption backend for a Yubico validation
+ service. It uses the YubiHSM to decrypt YubiKey OTPs and answer 'OK'
+ or 'ERR'.
