Change maintainer address to something that accepts all e-mail.

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: python-pyhsm
-Maintainer: Yubico Developers <yubico-devel@googlegroups.com>
+Maintainer: Yubico Open Source Maintainers <ossmaint@yubico.com>
 Uploaders: Fredrik Thulin <fredrik@yubico.com>, Simon Josefsson <simon@josefsson.org>
 Section: python
 Priority: optional
