--- a/debian/control
+++ b/debian/control
@@ -111,3 +111,18 @@ Description: Yubikey Key Storage Module using YubiHSM
  This package provides the decryption backend for a Yubico validation
  service. It uses the YubiHSM to decrypt YubiKey OTPs and answer 'OK'
  or 'ERR'.
+
+Package: yhsm-daemon
+Architecture: all
+Depends: ${python:Depends}
+	 ${misc:Depends},
+	 python-pyhsm (= ${binary:Version}),
+	 python-argparse
+XB-Python-Version: ${python:Versions}
+Provides: ${python:Provides}
+Description: YubiHSM server daemon
+ Provides a TCP based server allowing multiple processes to use a
+ single YubiHSM in parallel.
+ .
+ To utilize the YubiHSM via the server instead of using it directly,
+ pass yhsm://localhost:5348 as the device to python-pyhsm.
