Change maintainer to pkg-auth-maintainers.

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: python-pyhsm
-Maintainer: Yubico Open Source Maintainers <ossmaint@yubico.com>
-Uploaders: Simon Josefsson <simon@yubico.com>, Klas Lindfors <klas@yubico.com>, Dain Nilsson <dain@yubico.com>
+Maintainer: Debian Authentication Maintainers <pkg-auth-maintainers@lists.alioth.debian.org>
+Uploaders: Simon Josefsson <simon@josefsson.org>, Klas Lindfors <klas@yubico.com>, Dain Nilsson <dain@yubico.com>
 Section: python
 Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3),
