--- a/debian/control
+++ b/debian/control
@@ -100,7 +100,9 @@ Depends: ${python3:Depends},
 	 adduser,
 	 python-pyhsm (= ${binary:Version}),
 	 python-argparse,
-	 yhsm-tools
+	 yhsm-tools,
+	 python-daemon,
+	 python-sqlalchemy,
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
 Description: Yubikey Key Storage Module using YubiHSM
