Imported Upstream version 1.2.0

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include COPYING
 include ChangeLog
 include NEWS
 include doc/*
-include utils/*
-include yhsm-val/*
-include yubikey-ksm/*
+include man/*
 include examples/*.py
+include test/*.py
+include test/README.adoc
